# polyart

./: .gitignore  BIBLIOGRAPHY.md  CHANGELOG.md  CHARACTER_ENCODING.md  CONTRIBUTORS.md  POLYNOMIAL_WORLD_PROTOCOL.md  README.md  REGISTRY.md  amphora_art.py  ancient_art.py  apollo.polyart  apollonian_faces.py  bio_biomech.polyart  bio_growth.polyart  bio_turing.polyart  bio_variants.polyart  caricature.py  cv_check_emperor.py  cv_verification_new.json  cv_verification_report.json  cv_verify_all.py  cv_verify_new.py  demo.polyvid  demo_composition.polyart  demo_rose.polyart  emperor_caricature.py  emperor_portrait.py  install_polyart.bat  lines_composition.polyart  lines_composition.py  polyart_3d.py  polyart_animals.py  polyart_api.py  polyart_biology.py  polyart_converter.py  polyart_curves.py  polyart_cv_test.py  polyart_editor.py  polyart_emotions.py  polyart_flowers.py  (+20 more)
articles/: 13_flowers_in_math.txt  14_meta_language_design.txt  15_curves_of_the_body.txt  16_piranesi_impossible.txt  17_emotion_mathematics.txt  18_animal_polynomials.txt  19_cv_art_classification.txt  20_3d_polynomialRendering.txt  21_biological_patterns.txt  22_sculpture_lathe.txt  23_golden_ratio_everywhere.txt  24_color_theory_polynomials.txt  25_spqr_architecture.txt  26_parametric_polynomial_hybrid.txt  27_procedural_game_worlds.txt  28_neural_art_bridge.txt  29_symmetry_groups_polynomials.txt  30_medieval_manuscript_polyart.txt  31_kinetic_mathematical_art.txt  32_future_polyart.txt  ancient_greek_geometry.md  art_classification_cv.md  biological_patterns.md  codec_algorithms.txt  (+13 more)
(+238 files in other folders)
