[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyart"
version = "2.0.0"
description = "Polynomial art format, API, editor, and viewer for mathematical art"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "PolyArt Project"}
]
keywords = ["math-art", "polynomial", "generative-art", "greek-art", "roman-art"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.4",
    "scipy>=1.7",
]

[project.scripts]
polyart-viewer = "polyart_viewer:main"
polyart-editor = "polyart_editor:main"

[tool.setuptools]
py-modules = [
    "polyart_api",
    "polyart_format",
    "polyart_editor",
    "polyart_viewer",
]
